--- a/app/src/main/res/layout/tab_4.xml
+++ b/app/src/main/res/layout/tab_4.xml
@@ -57,6 +57,7 @@
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/background_input"
+                    android:editable="false"
                     android:ems="10"
                     android:paddingLeft="10dp"
                     android:paddingTop="5dp"
@@ -85,11 +86,12 @@
                     android:layout_marginTop="5dp"
                     android:layout_weight="1"
                     android:background="@drawable/background_input"
+                    android:editable="false"
                     android:ems="10"
                     android:paddingLeft="10dp"
                     android:paddingTop="5dp"
                     android:paddingRight="5dp"
-                    android:paddingBottom="5dp"  />
+                    android:paddingBottom="5dp" />
             </LinearLayout>
 
             <LinearLayout
